Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108605

Unhandled WinRT exception at QSystemLocalePrivate::uiLanguages()

XMLWordPrintable

    • 7d7ed24f51 (qt/qtbase/dev) 7d7ed24f51 (qt/tqtc-qtbase/dev) 938cdd2629 (qt/tqtc-qtbase/6.2) 192330439a (qt/qtbase/6.4)

      Found this among users crash reports on AppCenter

       Microsoft C++ exception: winrt::hresult_error at memory location 0x000000F1B8EFE820.
      
       	KERNELBASE.dll!RaiseException()	Unknown
       	VCRUNTIME140.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 75	C++
       	Qt6Core.dll!winrt::throw_hresult(const winrt::hresult result) Line 4783	C++
       	[Inline Frame] Qt6Core.dll!winrt::check_hresult(const winrt::hresult result) Line 4828	C++
       	[Inline Frame] Qt6Core.dll!winrt::get_activation_factory(const winrt::param::hstring &) Line 5840	C++
       	Qt6Core.dll!winrt::impl::factory_cache_entry<winrt::Windows::System::UserProfile::GlobalizationPreferences,winrt::Windows::System::UserProfile::IGlobalizationPreferencesStatics>::call<winrt::Windows::Foundation::Collections::IVectorView<winrt::hstring> (__cdecl*)(winrt::Windows::System::UserProfile::IGlobalizationPreferencesStatics const &)>(winrt::Windows::Foundation::Collections::IVectorView<winrt::hstring>(*)(const winrt::Windows::System::UserProfile::IGlobalizationPreferencesStatics &) && callback) Line 6067	C++
       	[Inline Frame] Qt6Core.dll!winrt::impl::call_factory_cast(winrt::Windows::System::UserProfile::GlobalizationPreferences::Languages::__l2::<lambda_355236062e7f687d4dca6495530b96e7> &&) Line 6126	C++
       	[Inline Frame] Qt6Core.dll!winrt::Windows::System::UserProfile::GlobalizationPreferences::Languages() Line 933	C++
      >	Qt6Core.dll!QSystemLocalePrivate::uiLanguages() Line 700	C++
       	Qt6Core.dll!QSystemLocale::query(QSystemLocale::QueryType type, QVariant in) Line 906	C++
       	Qt6Core.dll!QLocale::uiLanguages() Line 4430	C++
       	Qt6Core.dll!find_translation(const QLocale & locale, const QString & filename, const QString & prefix, const QString & directory, const QString & suffix) Line 666	C++
       	Qt6Core.dll!QTranslator::load(const QLocale & locale, const QString & filename, const QString & prefix, const QString & directory, const QString & suffix) Line 772	C++
       	Qt6Qml.dll!QQmlApplicationEnginePrivate::init() Line 81	C++
       	Qt6Qml.dll!QQmlApplicationEnginePrivate::startLoad(const QUrl & url, const QByteArray & data, bool dataFlag) Line 120	C++
       	Qt6Qml.dll!QQmlApplicationEngine::load(const QUrl & url) Line 292	C++
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes