QSystemLocale[Win]: Catch potential WinRT exceptions

Some Windows SDKs seem to throw an exception from winrt::check_hresult()
We need to handle this accordingly.

Fixes: QTBUG-108605
Change-Id: I14ad3b6dbd9b5fdf0120f9d3336a4d922167d169
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 7d7ed24f517aff2f4bf9f2e32a29603476af6c88)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>