src/corelib/text/qlocale_win.cpp
@@ -663,9 +663,13 @@ QVariant QSystemLocalePrivate::uiLanguages()
 #if QT_CONFIG(cpp_winrt) && !defined(Q_CC_CLANG)
     using namespace winrt;
     using namespace Windows::System::UserProfile;
-    auto languages = GlobalizationPreferences::Languages();
-    for (const auto &lang : languages)
-        result << QString::fromStdString(winrt::to_string(lang));
+    QT_TRY {
+        auto languages = GlobalizationPreferences::Languages();
+        for (const auto &lang : languages)
+            result << QString::fromStdString(winrt::to_string(lang));
+    } QT_CATCH(...) {
+        // pass, just fall back to WIN32 API implementation
+    }
     if (!result.isEmpty())
         return result; // else just fall back to WIN32 API implementation
 #endif // QT_CONFIG(cpp_winrt) && !defined(Q_CC_CLANG)
